tests/machine/x/cpp/dataset_where_filter.error
/workspace/mochi/tests/machine/x/cpp/dataset_where_filter.cpp:11:12: error: ‘person’ was not declared in this scope; did you mean ‘perror’?
   11 |   decltype(person.name) name;
      |            ^~~~~~
      |            perror
/workspace/mochi/tests/machine/x/cpp/dataset_where_filter.cpp:11:12: error: ‘person’ was not declared in this scope; did you mean ‘perror’?
   11 |   decltype(person.name) name;
      |            ^~~~~~
      |            perror
/workspace/mochi/tests/machine/x/cpp/dataset_where_filter.cpp:12:12: error: ‘person’ was not declared in this scope; did you mean ‘perror’?
   12 |   decltype(person.age) age;
      |            ^~~~~~
      |            perror
/workspace/mochi/tests/machine/x/cpp/dataset_where_filter.cpp:12:12: error: ‘person’ was not declared in this scope; did you mean ‘perror’?
   12 |   decltype(person.age) age;
      |            ^~~~~~
      |            perror
/workspace/mochi/tests/machine/x/cpp/dataset_where_filter.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/dataset_where_filter.cpp:24:38: error: cannot convert ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’} to ‘int’ in initialization
   24 |       __items.push_back(Adult{person.name, person.age, (person.age >= 60)});
      |                               ~~~~~~~^~~~
      |                                      |
      |                                      std::string {aka std::__cxx11::basic_string<char>}
